--- a/src/app/check-in/check-in.page.html
+++ b/src/app/check-in/check-in.page.html
@@ -67,7 +67,7 @@
             </div>
             <div>
               <ion-button fill="clear" color="tertiary" (click)="openModal()">
-                <ion-badge color="warning" slot="start">{{cita.vehicleCampaigns.length}}</ion-badge>
+                <ion-badge color="warning" slot="start">{{cita.vehicleCampaigns?.length || 0}}</ion-badge>
                 <ion-icon name="notifications" slot="icon-only"></ion-icon>
               </ion-button>
             </div>
