feat: implement check-in page with client details, service display, chassis validation, and vehicle campaign interface.

--- a/src/app/check-in/check-in.page.html
+++ b/src/app/check-in/check-in.page.html
@@ -65,7 +65,7 @@
             </div>
             <div>
               <ion-button fill="clear" color="tertiary" (click)="openModal()">
-                <ion-badge color="warning" slot="start">{{cita.VehicleCampaigns?.length || 0}}</ion-badge>
+                <ion-badge color="danger" slot="start">{{cita.VehicleCampaigns?.length || 0}}</ion-badge>
                 <ion-icon name="notifications" slot="icon-only"></ion-icon>
               </ion-button>
             </div>
